--- a/ISMHelpdesk/web/views/_user-modal.html
+++ b/ISMHelpdesk/web/views/_user-modal.html
@@ -4,24 +4,9 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-        <h4 class="modal-title" id="myModalLabel">{{selectedEmployee}}'s Personality</h4>
+        <h4 class="modal-title" id="myModalLabel">{{selectedEmployee}}'s Events</h4>
       </div>
-      <div class="modal-body">
-        <div id="employeeViz"></div>
-
-        <div class="survey-container">
-          <div class="survey-content" ng-repeat="survey in selectedEmployeeSurvey">
-
-            <div class="survey-question">
-              <b>{{survey.question}}</b>
-            </div>
-
-            <div class="survey-answer">
-              {{survey.answer}}
-            </div>
-
-          </div>
-        </div>
+      <div class="modal-body">       
 
       </div>
       <div class="modal-footer">
