--- a/ISMHelpdesk/web/views/login.html
+++ b/ISMHelpdesk/web/views/login.html
@@ -16,7 +16,7 @@
 
       </div>
       <div class="footer">        
-        <button type="button" class="btn btn-primary" data-dismiss="modal" ng-click="submit_login();">Submit</button>
+        <button type="button" class="btn btn-primary" data-dismiss="modal" ng-click="go('/results');">Submit</button>
       </div>
     
   
